add fig autocomplete app